<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="br.com.flashstudy.flashstudy_mobile.activities.CadastroActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        tools:targetApi="jelly_bean" />

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="420dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/lbl_cadastro"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/lblNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/lbl_nome"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="5dp" tools:targetApi="jelly_bean" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:hint="@string/hint_nome"
            android:inputType="textPersonName"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/lbl_email"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="5dp" tools:targetApi="jelly_bean" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/lblSenha"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/lbl_senha"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="5dp" tools:targetApi="jelly_bean"/>

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:hint="@string/hint_senha"
            android:inputType="textPassword"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/lblConfirmeSenha"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/lbl_confirme_senha"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:layout_marginStart="5dp" tools:targetApi="jelly_bean"/>

        <EditText
            android:id="@+id/txtConfirmeSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:hint="@string/hint_confirme_senha"
            android:inputType="textPassword"
            android:layout_marginStart="5dp" />

        <Button
            android:id="@+id/btnCad"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/colorSecondary"
            android:text="@string/lbl_btn_confirmar"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
