<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.crud.FlashcardCrudActivity"
    tools:showIn="@layout/activity_flashcard_crud">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/txt_flashcards"
                android:textColor="@android:color/background_light"
                android:textSize="36sp"
                app:fontFamily="@font/comfortaa_bold"
                tools:targetApi="jelly_bean" />

            <View
                android:id="@+id/Divisor1"
                android:layout_width="250dp"
                android:layout_height="1dip"
                android:layout_gravity="center_horizontal"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="#4286f4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:text="@string/lbl_flashcard_titulo"
                    android:textAppearance="@style/AppTheme.lbl_black" />

                <EditText
                    android:id="@+id/txtTitulo"
                    style="@style/AppTheme.lbl_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/comfortaa_regular"
                    android:hint="@string/hint_flashcard_titulo"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/deep_blue" />

                <TextView
                    android:id="@+id/textViewPergunta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:text="@string/lbl_flashcard_pergunta"
                    android:textAppearance="@style/AppTheme.lbl_black" />

                <EditText
                    android:id="@+id/txtPergunta"
                    style="@style/AppTheme.lbl_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/comfortaa_regular"
                    android:hint="@string/hint_flashcard_pergunta"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/deep_blue" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="#00a55d"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewResposta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:text="@string/lbl_flashcard_resposta"
                    android:textAppearance="@style/AppTheme.lbl_black" />

                <EditText
                    android:id="@+id/txtResposta"
                    style="@style/AppTheme.lbl_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/comfortaa_regular"
                    android:hint="@string/hint_flashcard_resposta"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/deep_blue" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>