<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.AjudaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/txt_ajuda"
                android:textColor="@android:color/background_light"
                android:textSize="36sp"
                app:fontFamily="@font/comfortaa_bold"
                tools:targetApi="jelly_bean" />
            <View
                android:id="@+id/Divisor1"
                android:layout_width="250dp"
                android:layout_height="1dip"
                android:layout_gravity="center_horizontal"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:background="@drawable/layout_bg">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/comfortaa_bold"
                    android:text="@string/txt_descricao_ajuda"
                    android:layout_margin="15dp"
                    android:textAppearance="@style/AppTheme.lbl_black" />

                <Button
                    android:id="@+id/btnAjudaCronograma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:background="@color/deep_blue"
                    android:text="@string/lbl_btn_ajuda_cronograma" />

                <Button
                    android:id="@+id/btnAjudaCiclo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:background="@color/winter"
                    android:text="@string/lbl_btn_ajuda_ciclo" />

                <Button
                    android:id="@+id/btnAjudaFlashcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:background="@color/black"
                    android:text="@string/lbl_btn_ajuda_flashcard" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>